plugins {
    id 'java'
    id 'application'
}



java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

repositories {
    mavenCentral()
}
sourceSets {
    main {
        resources {
            srcDirs = ['src/main/resources']
        }
    }
}
dependencies {
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
    implementation 'org.apache.poi:poi:5.2.4'
    implementation 'org.apache.poi:poi-ooxml:5.2.4'

    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.2'
}
application {
    mainClass = 'com.iseria.ui.Main'
}

compileJava.options.encoding = 'UTF-8'
jar {
    from sourceSets.main.resources
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

